Changelog
=========

2.6 (unreleased)
----------------

- Removed unused geoshapeform.pt template [gborelli]
- Added collective.z3cform.mapwidget dependency [gborelli]
- Added contentlocations_helper view to hide/show coordinate tabs
  [giorgio]
- Fixed browserlayer.xml [gborelli]
- Removed subscribers to mark/unmark georefereceable content types.
  Now all Archetypes contents provide IGeoReferenceable interface and
  can be georeferenced. A field in cgeo control panel allow in which
  content types display 'coordinates' tab [valentinaB]
- Changed method to display or hide Coordinates tab [valentinaB]
- Moved ShapeMapWidget and ShapeEditLayer classes to c.geo.mapwidget
  [gborelli]
- Removed geoshapemap shapeedit layer and widget and put them
  in c.geo.mapwidget [gborelli]
- Removed csv import feature. See https://github.com/collective/collective.geo.bundle/issues/6
  [valentinaB]


2.5 (2013-01-29)
----------------

- Added travis-ci configuration [gborelli]
- Moved reindexDocSubscriber from collective.geo.geographer [gborelli]
- Changed reindexDocSubscriber to reindexStylesSubscriber [gborelli]
- Removed import from zope.app [gborelli]
- Removed dependency on shapely, depend on pygeoif instead, fallback to shapely if installed [nan]
- Changed coordinates edit form in order to make it more user friendly [gborelli]
- Fixed wrongly open div tag in the geoshapeform.pt [rnd0101]
- Added German translation [Denis Krienbühl]


2.4 (2012-02-14)
----------------

- Allowed to remove coordinates from a content type [gborelli, mircoangelini]
- Added French translation [Fabien Moret]
- Added Danish translation [stonor]


0.2.3 (2011-09-05)
------------------
- Changed javascript to bind window load event to create map. It fixes #29 [gborelli]
- Show our default fieldset first on coordinates field in accordance with
  changes in plone.app.z3cform 0.5.0+.
  [davidjb]
- Added custom width/height fields for map sizing to the custom styles form.