@@ -1,5 +1,7 @@
 from zope.interface import implements
 from zope.lifecycleevent.interfaces import IObjectModifiedEvent
+from . import utils
+
 
 class IObjectStylesEvent(IObjectModifiedEvent):
     """An event signaling that an object has been 'geo styled'
@@ -14,10 +16,14 @@ class ObjectStylesEvent(object):
 
 
 def reindexStylesSubscriber(event):
-    """A subscriber to ObjectModifiedEvent"""
-    event.object.reindexObject(idxs=['collective_geo_styles'])
+    """A subscriber to IObjectStylesEvent"""
+    obj = event.object
+    if not utils.isDexterityContentType(obj):
+        obj.reindexObject(idxs=['collective_geo_styles'])
 
 
 def reindexDocSubscriber(event):
-    """A subscriber to ObjectModifiedEvent"""
-    event.object.reindexObject(idxs=['zgeo_geometry'])
+    """A subscriber to IObjectGeoreferencedEvent"""
+    obj = event.object
+    if not utils.isDexterityContentType(obj):
+        obj.reindexObject(idxs=['zgeo_geometry'])
